# propspp

./: .clang-format  .clang-tidy  .clangd.in  .gitignore  CMakeLists.txt  bindable_value.h  property_base.cpp  property_base.h
test/: CMakeLists.txt  property_test.cpp
